/**
 * Copyright (C) 2011-2013 Barchart, Inc. <http://www.barchart.com/>
 *
 * All rights reserved. Licensed under the OSI BSD License.
 *
 * http://www.opensource.org/licenses/bsd-license.php
 */

// Non-java (C, C++, etc) package name space.
package barchart_data;

// Builder options.
option java_package = "com.barchart.proto.buf.data";
option java_outer_classname = "MessageSpec";
option java_multiple_files = true;
option java_generate_equals_and_hash = true;
option optimize_for = SPEED;

// Message fields.
import "FieldSpec.proto";

// Market data message.
message MarketMessage {

	// Message content type.
	enum Type {
		UPDATE = 0; // market updates
		SNAPSHOT = 1; // market snapshots
	}

	// Message/Entry type.
	// All message entries are of this type.
	optional Type type = 1;

	// Market GUID.
	// Base for entries.
	optional sint64 marketId = 2;

	// Market sequence number.
	// Base for entries.
	optional sint64 sequence = 3;

	// Message/Entry send time.
	// Base for entries, millisFIX, UTC
	// Date/Time in format 2012-12-31T23:59:59.123 UTC -> 20121231235959123
	optional sint64 timeStamp = 4;

	// Message/Entry trade date.
	// Base for entries, days, market local time zone.
	// Date/Only in format 2012-07-04 -> 20120704
	optional sint32 tradeDate = 5;

	// Ordered list of market entries.
	repeated MarketEntry entry = 6;

	// Shared base price exponent for market entries.
	optional sint32 priceExponent = 7;

	// Shared base size exponent for market entries.
	optional sint32 sizeExponent = 8;

	//
}
